// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Checkbox label placement > label should on the bottom 1`] = `
<div
  class="bui-checkbox bui-checkbox-label-bottom"
  data-testid="bui-checkbox"
>
  <input
    class="bui-checkbox-input"
    type="checkbox"
  />
  <div
    class="bui-checkbox-icon"
  >
    <svg
      aria-hidden="true"
      class="bui-svg-icon"
      color="var(--bui-color-fg-disabled)"
      focusable="false"
      viewBox="0 0 96 96"
    >
      <path
        d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
      />
    </svg>
  </div>
  <div
    class="bui-checkbox-label"
  >
    Checkbox
  </div>
</div>
`;

exports[`Checkbox > Checkbox label placement > label should on the left 1`] = `
<div
  class="bui-checkbox bui-checkbox-label-left"
  data-testid="bui-checkbox"
>
  <input
    class="bui-checkbox-input"
    type="checkbox"
  />
  <div
    class="bui-checkbox-icon"
  >
    <svg
      aria-hidden="true"
      class="bui-svg-icon"
      color="var(--bui-color-fg-disabled)"
      focusable="false"
      viewBox="0 0 96 96"
    >
      <path
        d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
      />
    </svg>
  </div>
  <div
    class="bui-checkbox-label"
  >
    Checkbox
  </div>
</div>
`;

exports[`Checkbox > Checkbox label placement > label should on the right 1`] = `
<div
  class="bui-checkbox bui-checkbox-label-right"
  data-testid="bui-checkbox"
>
  <input
    class="bui-checkbox-input"
    type="checkbox"
  />
  <div
    class="bui-checkbox-icon"
  >
    <svg
      aria-hidden="true"
      class="bui-svg-icon"
      color="var(--bui-color-fg-disabled)"
      focusable="false"
      viewBox="0 0 96 96"
    >
      <path
        d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
      />
    </svg>
  </div>
  <div
    class="bui-checkbox-label"
  >
    Checkbox
  </div>
</div>
`;

exports[`Checkbox > Checkbox label placement > label should on the top 1`] = `
<div
  class="bui-checkbox bui-checkbox-label-top"
  data-testid="bui-checkbox"
>
  <input
    class="bui-checkbox-input"
    type="checkbox"
  />
  <div
    class="bui-checkbox-icon"
  >
    <svg
      aria-hidden="true"
      class="bui-svg-icon"
      color="var(--bui-color-fg-disabled)"
      focusable="false"
      viewBox="0 0 96 96"
    >
      <path
        d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
      />
    </svg>
  </div>
  <div
    class="bui-checkbox-label"
  >
    Checkbox
  </div>
</div>
`;
